// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorksiteFilters should render correctly and match snapshot 1`] = `<!---->`;

exports[`WorksiteFilters should set status open/closed 1`] = `
Object {
  "fields": Object {
    "data": Object {
      "muck_out": true,
    },
  },
  "flags": Object {},
  "statusGroups": Object {
    "data": Object {
      "closed": false,
      "open": true,
    },
  },
  "statuses": Object {},
  "sub_fields": Object {},
}
`;

exports[`WorksiteFilters should set status open/closed 2`] = `
Object {
  "fields": Object {
    "data": Object {
      "muck_out": true,
    },
  },
  "flags": Object {},
  "statusGroups": Object {
    "data": Object {
      "closed": false,
      "open": false,
    },
  },
  "statuses": Object {},
  "sub_fields": Object {},
}
`;

exports[`WorksiteFilters should update filters 1`] = `
Object {
  "fields": Object {
    "data": Object {
      "muck_out": true,
    },
  },
  "flags": Object {},
  "statusGroups": Object {
    "data": Object {
      "closed": false,
      "open": false,
    },
  },
  "statuses": Object {},
  "sub_fields": Object {},
}
`;
